mengganti kata "mahasiswa" pada mentor perempuan menjadi "mahasiswi"

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           />
           <div>
             <p class="name">Sonia Atikasari</p>
-            <p class="university">Mahasiswa Akuntansi Universitas Terbuka</p>
+            <p class="university">Mahasiswi Akuntansi Universitas Terbuka</p>
           </div>
         </div>
 
@@ -227,7 +227,7 @@
           <div>
             <p class="name">Leni Sopia</p>
             <p class="university">
-              Mahasiswa Akuntansi Universitas Islam Negeri Jakarta
+              Mahasiswi Akuntansi Universitas Islam Negeri Jakarta
             </p>
           </div>
         </div>
@@ -248,7 +248,7 @@
           <div>
             <p class="name">Fadia Hamid</p>
             <p class="university">
-              Mahasiswa Akuntansi Universitas Negeri Jakarta
+              Mahasiswi Akuntansi Universitas Negeri Jakarta
             </p>
           </div>
         </div>
@@ -261,7 +261,7 @@
           <div>
             <p class="name">Nurul Putri Azzahra</p>
             <p class="university">
-              Mahasiswa Pendidikan Ekonomi Konsentrasi Pendidikan Akuntansi
+              Mahasiswi Pendidikan Ekonomi Konsentrasi Pendidikan Akuntansi
               Universitas Negeri Jakarta
             </p>
           </div>
@@ -275,7 +275,7 @@
           <div>
             <p class="name">Devania Azzahra</p>
             <p class="university">
-              Mahasiswa Akuntansi Universitas Islam Negeri Jakarta
+              Mahasiswi Akuntansi Universitas Islam Negeri Jakarta
             </p>
           </div>
         </div>
@@ -288,7 +288,7 @@
           <div>
             <p class="name">Shabrina Nabilah Syofwan</p>
             <p class="university">
-              Mahasiswa Pendidikan Ekonomi Universitas Negeri Jakarta
+              Mahasiswi Pendidikan Ekonomi Universitas Negeri Jakarta
             </p>
           </div>
         </div>
@@ -301,7 +301,7 @@
           <div>
             <p class="name">Tiara Damayanti</p>
             <p class="university">
-              Mahasiswa Pendidikan Ekonomi Universitas Negeri Jakarta
+              Mahasiswi Pendidikan Ekonomi Universitas Negeri Jakarta
             </p>
           </div>
         </div>
@@ -314,7 +314,7 @@
           <div>
             <p class="name">Nathasa Diana Permatasari</p>
             <p class="university">
-              Mahasiswa Akuntansi Universitas Islam Negeri Jakarta
+              Mahasiswi Akuntansi Universitas Islam Negeri Jakarta
             </p>
           </div>
         </div>
@@ -324,7 +324,7 @@
           <div>
             <p class="name">Rahma Faizha</p>
             <p class="university">
-              Mahasiswa Pendidikan Akuntansi Universitas Negeri Jakarta
+              Mahasiswi Pendidikan Akuntansi Universitas Negeri Jakarta
             </p>
           </div>
         </div>
@@ -347,7 +347,7 @@
           <div>
             <p class="name">Siddiqoh</p>
             <p class="university">
-              Mahasiswa Akuntansi Universitas Islam Negeri Jakarta
+              Mahasiswi Akuntansi Universitas Islam Negeri Jakarta
             </p>
           </div>
         </div>
