--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
 
         <div>
-          <img src="src/imgs/services/Konsultasi.png" alt="Konsultasi" />
+          <img src="src/imgs/services/Konsultasi.jpeg" alt="Konsultasi" />
           <h5>Konsultasi</h5>
           <p>
             Peserta diberikan kebebasan untuk menanyakan perihal tugas dari
