--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p>
           Belajar akuntansi dengan <span><br />mudah bersama kami</span>
         </p>
-        <a href="https://wa.me/6283872906455" target="_blank">
+        <a href="https://wa.me/6283872906455/" target="_blank">
           <svg
             fill="#25D366"
             role="img"
@@ -59,71 +59,7 @@
     <section id="services" class="services">
       <h1>Kegiatan Kami</h1>
       <div class="services-grid">
-        <div>
-          <img src="src/imgs/services/Pembelajaran.jpg" alt="Pembelajaran" />
-          <h5>Pembelajaran</h5>
-          <p>
-            Pembelajaran dilakukan dengan 2 metode, yaitu luring yang dilakukan
-            setiap hari Sabtu di beberapa tempat yang telah ditentukan, dan
-            daring yang dilakukan setiap hari Minggu dengan menggunakan media
-            komunikasi daring secara langsung. Peserta boleh memilih untuk
-            mengikuti salah satunya, juga boleh mengikuti keduanya!
-          </p>
-        </div>
-
-        <div>
-          <img src="src/imgs/services/Konsultasi.jpeg" alt="Konsultasi" />
-          <h5>Konsultasi</h5>
-          <p>
-            Peserta diberikan kebebasan untuk menanyakan perihal tugas dari
-            sekolah atau dari luar sekolah yang berhubungan dengan akuntansi
-            kepada para mentor yang tersedia!
-          </p>
-        </div>
-
-        <div>
-          <img src="src/imgs/services/Jalan jalan.jpeg" alt="Jalan-jalan" />
-          <h5>Jalan-jalan</h5>
-          <p>
-            Kegiatan berkeliling pada waktu tertentu yang diadakan setelah Ujian
-            Akhir Semester guna memberikan rasa kebahagiaan kepada para peserta!
-          </p>
-        </div>
-
-        <div>
-          <img
-            src="src/imgs/services/Kunjungan Perguruan Tinggi.jpg"
-            alt="Kunjungan ke Perguruan Tinggi"
-          />
-          <h5>Kunjungan ke Perguruan Tinggi</h5>
-          <p>
-            Kegiatan berkunjung ke perguruan tinggi yang memiliki kejuruan
-            akuntansi yang dilakukan setiap 2 kali pada 1 tahun pembelajaran
-            agar para peserta memiliki motivasi besar untuk menjadi mahasiswa
-            akuntansi dari suatu perguruan tinggi!
-          </p>
-        </div>
-
-        <div>
-          <img
-            src="src/imgs/services/Buka Puasa Bersama.jpeg"
-            alt="Buka Puasa Bersama"
-          />
-          <h5>Buka Puasa Bersama</h5>
-          <p>
-            Kegiatan buka puasa bersama yang dilakukan di tengah-tengah bulan
-            Romadhon demi menjaga keharmonisan di dalam!
-          </p>
-        </div>
-
-        <div>
-          <img src="src/imgs/services/Wisuda.jpeg" alt="Wisuda" />
-          <h5>Wisuda</h5>
-          <p>
-            Kegiatan yang dilakukan pada akhir tahun pembelajaran Accounting
-            Club yang diperuntukkan bagi peserta yang bertahan hingga akhir!
-          </p>
-        </div>
+        <!-- Isinya sudah diatur dengan Javascript -->
       </div>
     </section>
 
@@ -131,226 +67,32 @@
       <h1>Tim Kami</h1>
       <div class="teams-leader">
         <h5>Ketua</h5>
-        <img src="" alt="Rizky Ramadhan" />
+        <img src="src/imgs/mentor/Rizky Ramadhan.webp" alt="Rizky Ramadhan" />
         <div>
           <p class="name">Rizky Ramadhan</p>
-          <p class="university">
+          <p class="status">
             Pegawai Perpajakan KPP Pratama Jakarta Penjaringan
           </p>
+          <a href="https://www.instagram.com/riz_ramadhan77/" target="_blank">
+            <svg
+              fill="#FF0069"
+              role="img"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <title>Instagram</title>
+              <path
+                d="M7.0301.084c-1.2768.0602-2.1487.264-2.911.5634-.7888.3075-1.4575.72-2.1228 1.3877-.6652.6677-1.075 1.3368-1.3802 2.127-.2954.7638-.4956 1.6365-.552 2.914-.0564 1.2775-.0689 1.6882-.0626 4.947.0062 3.2586.0206 3.6671.0825 4.9473.061 1.2765.264 2.1482.5635 2.9107.308.7889.72 1.4573 1.388 2.1228.6679.6655 1.3365 1.0743 2.1285 1.38.7632.295 1.6361.4961 2.9134.552 1.2773.056 1.6884.069 4.9462.0627 3.2578-.0062 3.668-.0207 4.9478-.0814 1.28-.0607 2.147-.2652 2.9098-.5633.7889-.3086 1.4578-.72 2.1228-1.3881.665-.6682 1.0745-1.3378 1.3795-2.1284.2957-.7632.4966-1.636.552-2.9124.056-1.2809.0692-1.6898.063-4.948-.0063-3.2583-.021-3.6668-.0817-4.9465-.0607-1.2797-.264-2.1487-.5633-2.9117-.3084-.7889-.72-1.4568-1.3876-2.1228C21.2982 1.33 20.628.9208 19.8378.6165 19.074.321 18.2017.1197 16.9244.0645 15.6471.0093 15.236-.005 11.977.0014 8.718.0076 8.31.0215 7.0301.0839m.1402 21.6932c-1.17-.0509-1.8053-.2453-2.2287-.408-.5606-.216-.96-.4771-1.3819-.895-.422-.4178-.6811-.8186-.9-1.378-.1644-.4234-.3624-1.058-.4171-2.228-.0595-1.2645-.072-1.6442-.079-4.848-.007-3.2037.0053-3.583.0607-4.848.05-1.169.2456-1.805.408-2.2282.216-.5613.4762-.96.895-1.3816.4188-.4217.8184-.6814 1.3783-.9003.423-.1651 1.0575-.3614 2.227-.4171 1.2655-.06 1.6447-.072 4.848-.079 3.2033-.007 3.5835.005 4.8495.0608 1.169.0508 1.8053.2445 2.228.408.5608.216.96.4754 1.3816.895.4217.4194.6816.8176.9005 1.3787.1653.4217.3617 1.056.4169 2.2263.0602 1.2655.0739 1.645.0796 4.848.0058 3.203-.0055 3.5834-.061 4.848-.051 1.17-.245 1.8055-.408 2.2294-.216.5604-.4763.96-.8954 1.3814-.419.4215-.8181.6811-1.3783.9-.4224.1649-1.0577.3617-2.2262.4174-1.2656.0595-1.6448.072-4.8493.079-3.2045.007-3.5825-.006-4.848-.0608M16.953 5.5864A1.44 1.44 0 1 0 18.39 4.144a1.44 1.44 0 0 0-1.437 1.4424M5.8385 12.012c.0067 3.4032 2.7706 6.1557 6.173 6.1493 3.4026-.0065 6.157-2.7701 6.1506-6.1733-.0065-3.4032-2.771-6.1565-6.174-6.1498-3.403.0067-6.156 2.771-6.1496 6.1738M8 12.0077a4 4 0 1 1 4.008 3.9921A3.9996 3.9996 0 0 1 8 12.0077"
+              />
+            </svg>
+            <p>Instagram</p>
+          </a>
         </div>
       </div>
       <div class="teams-grid">
         <h5>Mentor</h5>
-        <div>
-          <img
-            src="src/imgs/mentor/Aditya Firmansyah.jpeg"
-            alt="Aditya Firmansyah"
-          />
-          <div>
-            <p class="name">Aditya Firmansyah</p>
-            <p class="university">Pegawai Finansial PT Surya Citra Media TBK</p>
-          </div>
-        </div>
 
-        <div>
-          <img src="src/imgs/mentor/Daffa Arkan.jpeg" alt="Daffa Nur Arkan" />
-          <div>
-            <p class="name">Daffa Nur Arkan</p>
-            <p class="university">
-              Mahasiswa Akuntansi Universitas Negeri Jakarta
-            </p>
-          </div>
-        </div>
-
-        <div>
-          <img
-            src="src/imgs/mentor/Mohamad Adi Arul Alam.jpg"
-            alt="Mohamad Adi Arul Alam"
-          />
-          <div>
-            <p class="name">Mohamad Adi Arul Alam</p>
-            <p class="university">
-              Mahasiswa Akuntansi Universitas Negeri Jakarta
-            </p>
-          </div>
-        </div>
-
-        <div>
-          <img
-            src="src/imgs/mentor/Muhammad Raja Pandiangan.jpeg"
-            alt="Muhammad Raja Pandiangan"
-          />
-          <div>
-            <p class="name">Muhammad Raja Pandiangan</p>
-            <p class="university">
-              Mahasiswa Akuntansi Sektor Publik Universitas Negeri Jakarta
-            </p>
-          </div>
-        </div>
-
-        <div>
-          <img
-            src="src/imgs/mentor/Ahmad Yaasin.jpg"
-            alt="Ahmad Yaasin Hafidz"
-          />
-          <div>
-            <p class="name">Ahmad Yaasin Hafidz</p>
-            <p class="university">
-              Mahasiswa Akuntansi Sektor Publik Universitas Negeri Jakarta
-            </p>
-          </div>
-        </div>
-
-        <div>
-          <img src="" alt="Rizky Ramadhan" />
-          <div>
-            <p class="name">Rizky Ramadhan</p>
-            <p class="university">
-              Pegawai Perpajakan KPP Pratama Jakarta Penjaringan
-            </p>
-          </div>
-        </div>
-
-        <div>
-          <img
-            src="src/imgs/mentor/Sonia Atikasari.jpg"
-            alt="Sonia Atikasari"
-          />
-          <div>
-            <p class="name">Sonia Atikasari</p>
-            <p class="university">Mahasiswi Akuntansi Universitas Terbuka</p>
-          </div>
-        </div>
-
-        <div>
-          <img src="src/imgs/mentor/Leni Sopia.jpeg" alt="Leni Sopia" />
-          <div>
-            <p class="name">Leni Sopia</p>
-            <p class="university">
-              Mahasiswi Akuntansi Universitas Islam Negeri Jakarta
-            </p>
-          </div>
-        </div>
-
-        <div>
-          <img
-            src="src/imgs/mentor/Izmi Fadya Zahara.jpeg"
-            alt="Izmi Fadya Zahara"
-          />
-          <div>
-            <p class="name">Izmi Fadya Zahara</p>
-            <p class="university">Pegawai Akuntansi PT Geotech</p>
-          </div>
-        </div>
-
-        <div>
-          <img src="src/imgs/mentor/Fadia Hamid.jpg" alt="Fadia Hamid" />
-          <div>
-            <p class="name">Fadia Hamid</p>
-            <p class="university">
-              Mahasiswi Akuntansi Universitas Negeri Jakarta
-            </p>
-          </div>
-        </div>
-
-        <div>
-          <img
-            src="src/imgs/mentor/Nurul Putri Azzahra.jpg"
-            alt="Nurul Putri Azzahra"
-          />
-          <div>
-            <p class="name">Nurul Putri Azzahra</p>
-            <p class="university">
-              Mahasiswi Pendidikan Ekonomi Konsentrasi Pendidikan Akuntansi
-              Universitas Negeri Jakarta
-            </p>
-          </div>
-        </div>
-
-        <div>
-          <img
-            src="src/imgs/mentor/Devania Azzahra.jpg"
-            alt="Devania Azzahra"
-          />
-          <div>
-            <p class="name">Devania Azzahra</p>
-            <p class="university">
-              Mahasiswi Akuntansi Universitas Islam Negeri Jakarta
-            </p>
-          </div>
-        </div>
-
-        <div>
-          <img
-            src="src/imgs/mentor/Shabrina Nabilah Syofwan.jpg"
-            alt="Shabrina Nabilah Syofwan"
-          />
-          <div>
-            <p class="name">Shabrina Nabilah Syofwan</p>
-            <p class="university">
-              Mahasiswi Pendidikan Ekonomi Universitas Negeri Jakarta
-            </p>
-          </div>
-        </div>
-
-        <div>
-          <img
-            src="src/imgs/mentor/Tiara Damayanti.jpeg"
-            alt="Tiara Damayanti"
-          />
-          <div>
-            <p class="name">Tiara Damayanti</p>
-            <p class="university">
-              Mahasiswi Pendidikan Ekonomi Universitas Negeri Jakarta
-            </p>
-          </div>
-        </div>
-
-        <div>
-          <img
-            src="src/imgs/mentor/Nathasa Diana Permatasari.jpg"
-            alt="Nathasa Diana Permatasari"
-          />
-          <div>
-            <p class="name">Nathasa Diana Permatasari</p>
-            <p class="university">
-              Mahasiswi Akuntansi Universitas Islam Negeri Jakarta
-            </p>
-          </div>
-        </div>
-
-        <div>
-          <img src="src/imgs/mentor/Rahma Faizha.jpeg" alt="Rahma Faizha" />
-          <div>
-            <p class="name">Rahma Faizha</p>
-            <p class="university">
-              Mahasiswi Pendidikan Akuntansi Universitas Negeri Jakarta
-            </p>
-          </div>
-        </div>
-
-        <div>
-          <img
-            src="src/imgs/mentor/Abdan Faqih Izzudin.jpg"
-            alt="Abdan Faqih Izzudin"
-          />
-          <div>
-            <p class="name">Abdan Faqih Izzudin</p>
-            <p class="university">
-              Mahasiswa Akuntansi Universitas Negeri Jakarta
-            </p>
-          </div>
-        </div>
-
-        <div>
-          <img src="" alt="Siddiqoh" />
-          <div>
-            <p class="name">Siddiqoh</p>
-            <p class="university">
-              Mahasiswi Akuntansi Universitas Islam Negeri Jakarta
-            </p>
-          </div>
-        </div>
+        <!-- Isinya sudah diatur dengan Javascript -->
       </div>
     </section>
 
@@ -384,136 +126,7 @@
 
         <div class="about-content-2-wrap">
           <div class="about-content-2-wrap-grid">
-            <div>
-              <h5>RPTRA Kejora</h5>
-              <img src="src/imgs/places/RPTRA Kejora.jpg" alt="RPTRA Kejora" />
-              <p>
-                Jl. Pembangunan II No.12 Bb, RT.9/RW.2, Petojo Utara, Kecamatan
-                Gambir, Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta 10130
-              </p>
-              <a
-                href="https://maps.app.goo.gl/FZ38TSRvyKq368w8A"
-                target="_blank"
-                >Cari Lokasi</a
-              >
-            </div>
-
-            <div>
-              <h5>RPTRA Dahlia</h5>
-              <img src="src/imgs/places/RPTRA Dahlia.jpg" alt="RPTRA Dahlia" />
-              <p>
-                Jl. Nurul Hidayah No.6, RT.6/RW.3, Kp. Tengah, Kec. Kramat jati,
-                Kota Jakarta Timur, Daerah Khusus Ibukota Jakarta 13540
-              </p>
-              <a
-                href="https://maps.app.goo.gl/jyj35h74zXDSUP1V7"
-                target="_blank"
-                >Cari Lokasi</a
-              >
-            </div>
-
-            <div>
-              <h5>RPTRA Danau Sunter</h5>
-              <img
-                src="src/imgs/places/RPTRA Danau Sunter.jpg"
-                alt="RPTRA Danau Sunter"
-              />
-              <p>
-                Jl. Telaga Murni 2 No.1 21, RT.21/RW.1, Sunter Jaya, Kec. Tj.
-                Priok, Jkt Utara, Daerah Khusus Ibukota Jakarta 14360
-              </p>
-              <a
-                href="https://maps.app.goo.gl/mqzN7RSCkeP4aRLG7"
-                target="_blank"
-                >Cari Lokasi</a
-              >
-            </div>
-
-            <div>
-              <h5>RPTRA Johar Berseri</h5>
-              <img
-                src="src/imgs/places/RPTRA Johar Berseri.jpg"
-                alt="RPTRA Johar Berseri"
-              />
-              <p>
-                Jl. Kramat Jaya Baru 5 No.14, RT.14/RW.1, Johar Baru, Kec. Johar
-                Baru, Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta 10560
-              </p>
-              <a
-                href="https://maps.app.goo.gl/VKm584tPmGz8oh1N9"
-                target="_blank"
-                >Cari Lokasi</a
-              >
-            </div>
-
-            <div>
-              <h5>RPTRA Maya Asri 13</h5>
-              <img
-                src="src/imgs/places/RPTRA Maya Asri 13.jpg"
-                alt="RPTRA Maya Asri 13"
-              />
-              <p>
-                RQ2J+WX6, RT.2/RW.13, Palmerah, Kec. Palmerah, Kota Jakarta
-                Barat, Daerah Khusus Ibukota Jakarta 11530
-              </p>
-              <a
-                href="https://maps.app.goo.gl/MfXEkjssadyU8Rwh7"
-                target="_blank"
-                >Cari Lokasi</a
-              >
-            </div>
-
-            <div>
-              <h5>RPTRA Bambu Petung</h5>
-              <img
-                src="src/imgs/places/RPTRA Bambu Petung.jpg"
-                alt="RPTRA Bambu Petung"
-              />
-              <p>
-                Jl. Bambu Petung, RT.5/RW.5, Bambu Apus, Kec. Cipayung, Kota
-                Jakarta Timur, Daerah Khusus Ibukota Jakarta 13890
-              </p>
-              <a
-                href="https://maps.app.goo.gl/k33gH5WWQy83zggU7"
-                target="_blank"
-                >Cari Lokasi</a
-              >
-            </div>
-
-            <div>
-              <h5>RPTRA Cibesut</h5>
-              <img
-                src="src/imgs/places/RPTRA Cibesut.jpg"
-                alt="RPTRA Cibesut"
-              />
-              <p>
-                Jl. Swadaya No.2 6, RT.6/RW.14, Cipinang Besar Utara, Kecamatan
-                Jatinegara, Kota Jakarta Timur, Daerah Khusus Ibukota Jakarta
-                13410
-              </p>
-              <a
-                href="https://maps.app.goo.gl/PenAZNmTJLxPd6Y87"
-                target="_blank"
-                >Cari Lokasi</a
-              >
-            </div>
-
-            <div>
-              <h5>Sekretariat Student Care</h5>
-              <img
-                src="src/imgs/places/Sekretariat Student Care.jpg"
-                alt="Sekretariat Student Care"
-              />
-              <p>
-                Jl. B II No.30 8, RT.8/RW.7, Ps. Minggu, Kota Jakarta Selatan,
-                Daerah Khusus Ibukota Jakarta 12520
-              </p>
-              <a
-                href="https://maps.app.goo.gl/qaCD6rc4hbvV1Fhu9"
-                target="_blank"
-                >Cari Lokasi</a
-              >
-            </div>
+            <!-- Isinya sudah diatur dengan Javascript -->
           </div>
         </div>
       </div>
